# integrations-core

./: .codecov.yml  .coveragerc  .cursorrules_dbm_sql_analysis  .dockerignore  .evalya-root  .flake8  .gitignore  .gitlab-ci.yml  .in-toto-run.py  .in-toto-run.sh  .mention-bot  .pre-commit-config.yaml  .public-tuf-config.json  .pylintrc  .rubocop.yml  .travis.yml  .trishank-in-toto-run.sh  .tuf-root.json  404.html  AGENTS.md  AGENT_CHANGELOG.md  AGENT_INTEGRATIONS.md  CONTRIBUTING.md  Dockerfile  Gemfile  KAFKA_CLUSTER_METADATA_COLLECTION.md  KAFKA_INTEGRATION_SUMMARY.md  LICENSE  LICENSE-3rdparty.csv  LOCAL_DEVELOPMENT.md  README.md  Rakefile  SECURITY.md  agent_requirements.in  appveyor.yml  azure-pipelines.yml  bucket-policy.json  build-wheels.sh  changelog_template.jinja  circle.yml  (+59 more)
aerospike/: CHANGELOG.md  README.md  hatch.toml  manifest.json  metadata.csv  pyproject.toml  requirements.in  requirements.txt  setup.py  tox.ini
aerospike/assets/: dataflows.yaml  service_checks.json
aerospike/changelog.d/: 15997.added  16423.added  17762.fixed  18996.fixed  19182.added  19188.added  19188.changed  19188.fixed  22203.added  22510.fixed
aerospike/logos/: README.md
aerospike/tests/: common.py  conftest.py  test_aerospike.py  test_unit.py  test_unit_openmetricsv2.py
amazon_msk/: CHANGELOG.md  README.md  hatch.toml  manifest.json  metadata.csv  pyproject.toml  requirements.in  setup.py  tox.ini
amazon_msk/assets/: dataflows.yaml  service_checks.json
amazon_msk/changelog.d/: 16152.added  16496.fixed  17332.added  19376.added  19552.added  22676.fixed  23356.added  23527.fixed
amazon_msk/tests/: common.py  conftest.py  test_e2e.py  test_unit.py
argocd/: CHANGELOG.md  README.md  hatch.toml  manifest.json  metadata.csv  pyproject.toml  setup.py
argocd/assets/: dataflows.yaml  service_checks.json  webhook_config.json
argocd/changelog.d/: 16897.added  17252.fixed  18018.fixed  18961.added  20368.added  20412.added  21882.added  22960.added  23917.added  24090.added  24091.added  24112.added  24288.added  24503.added  24624.added
argocd/tests/: common.py  conftest.py  test_argocd.py  (+4 more)
aspdotnet/: CHANGELOG.md  README.md  check.py  hatch.toml  manifest.json  metadata.csv  pyproject.toml  requirements-dev.txt  setup.py  test_aspdotnet.py  tox.ini
checkpoint_quantum_firewall/: CHANGELOG.md  README.md  manifest.json  pyproject.toml
cisco_aci/: CHANGELOG.md  README.md  hatch.toml  installer.sh  just_install_cisco.sh  manifest.json  metadata.csv  pyproject.toml  requirements.in  requirements.txt  service_checks.json  setup.py  tox.ini  upload.sh
clickhouse/: AGENTS.md  CHANGELOG.md  README.md  hatch.toml  manifest.json  metadata-legacy.csv  metadata.csv  metrics_tier_proposal.csv  pyproject.toml  requirements.in  setup.py  test_query_samples.py  tox.ini
cloud_spanner/: CHANGELOG.md  DESIGN.md  README.md  hatch.toml  manifest.json  metadata.csv  pyproject.toml  test_connectivity.py
cloudera/: CHANGELOG.md  README.md  hatch.toml  manifest.json  metadata.csv  pyproject.toml  setup.py
crest_data_systems_microsoft_scom/: CHANGELOG.md  README.md  hatch.toml  manifest.json  pyproject.toml
datadog_checks_base/: CHANGELOG.md  MANIFEST.in  README.md  agent_requirements.in  agent_requirements.txt  hatch.toml  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  setup.py  tox.ini
datadog_checks_dev/: CHANGELOG.md  MANIFEST.in  README.md  hatch.toml  pyproject.toml  requirements-dev.txt  run.py  setup.cfg  setup.py  tox.ini  val.py
datadog_checks_downloader/: .coveragerc  CHANGELOG.md  README.md  hatch.toml  public-test.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.in  setup.py  tox.ini
dcgm/: CHANGELOG.md  README.md  hatch.toml  manifest.json  metadata.csv  pyproject.toml  setup.py
ddev/: .flake8  .gitignore  CHANGELOG.md  README.md  ddev-13.0.0.pkg  hatch.toml  pyoxidizer.bzl  pyproject.toml
do_query_actions/: CHANGELOG.md  README.md  hatch.toml  manifest.json  metadata.csv  pyproject.toml
ecs_fargate/: CHANGELOG.md  README.md  conf.yaml.example  hatch.toml  manifest.json  metadata.csv  pyproject.toml  setup.py  test_ecs_fargate.py  tox.ini
fluxcd/: CHANGELOG.md  README.md  hatch.toml  manifest.json  metadata.csv  pyproject.toml  setup.py
gitlab_runner/: CHANGELOG.md  README.md  check.py  hatch.toml  manifest.json  metadata.csv  pyproject.toml  requirements.in  requirements.txt  setup.py  test_gitlab_runner.py  tox.ini
glusterfs/: CHANGELOG.md  README.md  hatch.toml  manifest.json  metadata.csv  pyproject.toml  setup.py  tox.ini
gunicorn/: CHANGELOG.md  README.md  check.py  conf.yaml.example  hatch.toml  manifest.json  metadata.csv  pyproject.toml  requirements-dev.txt  requirements.in  service_checks.json  setup.py  test_gunicorn.py  tox.ini
ibm_ace/: CHANGELOG.md  README.md  hatch.toml  manifest.json  metadata.csv  pyproject.toml  requirements-dev.txt  tox.ini
ibm_i/: CHANGELOG.md  README.md  manifest.json  metadata.csv  pyproject.toml  requirements.in  setup.py  tox.ini
ibm_mq/: CHANGELOG.md  README.md  hatch.toml  manifest.json  metadata.csv  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  service_checks.json  setup.py  simulate_mq_conn.py  tox.ini
ibm_was/: CHANGELOG.md  README.md  hatch.toml  manifest.json  metadata.csv  pyproject.toml  requirements.in  requirements.txt  service_checks.json  setup.py  tox.ini
impala/: CHANGELOG.md  README.md  hatch.toml  manifest.json  metadata.csv  pyproject.toml  setup.py
ivanti_connect_secure/: CHANGELOG.md  README.md  manifest.json  pyproject.toml
jboss_wildfly/: CHANGELOG.md  README.md  manifest.json  metadata.csv  pyproject.toml  service_checks.json  setup.py  tox.ini
kafka_consumer/: CHANGELOG.md  README.md  README_TESTING.md  check.py  conf.yaml.example  hatch.toml  manifest.json  metadata.csv  pyproject.toml  requirements.in  requirements.txt  schema_registry_auth_examples.yaml  setup.py  test_kafka_consumer.py  tox.ini
lparstats/: CHANGELOG.md  README.md  hatch.toml  manifest.json  metadata.csv  pyproject.toml  setup.cfg
(+21814 files in other folders)
