[build-system]
requires = [
    "hatchling>=0.11.2",
    "setuptools<61",
]
build-backend = "hatchling.build"

[project]
name = "datadog-aerospike"
description = "The Aerospike check"
readme = "README.md"
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "aerospike",
]
authors = [
    { name = "Datadog", email = "packages@datadoghq.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "datadog-checks-base>=25.1.0",
]
dynamic = [
    "version",
]

[project.license]
text = "BSD-3-Clause"

[project.optional-dependencies]
deps = [
    "aerospike==4.0.0; sys_platform != 'win32' and sys_platform != 'darwin' and python_version < '3.0'",
    "aerospike==7.0.2; sys_platform != 'win32' and sys_platform != 'darwin' and python_version > '3.0'",
]

[project.urls]
Source = "https://github.com/DataDog/integrations-core"

[tool.hatch.version]
path = "datadog_checks/aerospike/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/aerospike",
]
dev-mode-dirs = [
    ".",
]
