[build-system]
requires = [
    "hatchling>=0.11.2",
    "setuptools>=66",
]
build-backend = "hatchling.build"

[project]
name = "datadog-amazon-msk"
description = "The Amazon Kafka check"
readme = "README.md"
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "amazon_msk",
]
authors = [
    { name = "Datadog", email = "packages@datadoghq.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: System :: Monitoring",
    "Private :: Do Not Upload",
]
dependencies = [
    "datadog-checks-base>=25.1.0",
]
dynamic = [
    "version",
]

[project.license]
text = "BSD-3-Clause"

[project.optional-dependencies]
deps = [
    "boto3==1.17.112; python_version < '3.0'",
    "boto3==1.26.51; python_version > '3.0'",
]

[project.urls]
Source = "https://github.com/DataDog/integrations-core"

[tool.hatch.version]
path = "datadog_checks/amazon_msk/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/amazon_msk",
]
dev-mode-dirs = [
    ".",
]
