[build-system]
requires = [
    "hatchling>=0.11.2",
]
build-backend = "hatchling.build"

[project]
name = "datadog-amazon-msk"
description = "The Amazon Kafka check"
readme = "README.md"
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "amazon_msk",
]
authors = [
    { name = "Datadog", email = "packages@datadoghq.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Private :: Do Not Upload",
]
dependencies = [
    "datadog-checks-base>=37.4.0",
]
dynamic = [
    "version",
]
license = "BSD-3-Clause"

[project.optional-dependencies]
deps = [
    "boto3==1.36.1",
]

[project.urls]
Source = "https://github.com/DataDog/integrations-core"

[tool.hatch.version]
path = "datadog_checks/amazon_msk/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/amazon_msk",
]
dev-mode-dirs = [
    ".",
]
