[build-system]
requires = [
    "hatchling>=0.24.0",
]
build-backend = "hatchling.build"

[project]
name = "datadog-argocd"
description = "The ArgoCD check"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
    { name = "Datadog", email = "packages@datadoghq.com" },
]
keywords = [
    "agent",
    "argocd",
    "check",
    "datadog",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "datadog-checks-base>=25.1.0",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
deps = []

[project.urls]
Homepage = "https://github.com/DataDog/integrations-core"

[tool.hatch.version]
path = "datadog_checks/argocd/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
    "/requirements-dev.txt",
    "/tox.ini",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/argocd",
]
dev-mode-dirs = [
    ".",
]
