[build-system]
requires = [
    "hatchling>=0.24.0",
]
build-backend = "hatchling.build"

[project]
name = "datadog-argocd"
description = "The Argo CD check"
readme = "README.md"
requires-python = ">=3.8"
license = "BSD-3-Clause"
authors = [
    { name = "Datadog", email = "packages@datadoghq.com" },
]
keywords = [
    "agent",
    "argocd",
    "check",
    "datadog",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "datadog-checks-base>=32.6.0",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
deps = []

[project.urls]
Homepage = "https://github.com/DataDog/integrations-core"

[tool.hatch.version]
path = "datadog_checks/argocd/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/argocd",
]
dev-mode-dirs = [
    ".",
]
