[build-system]
requires = [
    "hatchling>=0.11.2",
]
build-backend = "hatchling.build"

[project]
name = "datadog-aspdotnet"
description = "The ASP.NET check"
readme = "README.md"
license = {text = "BSD-3-Clause"}
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "aspdotnet",
]
authors = [
    { name = "Datadog", email = "packages@datadoghq.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: System :: Monitoring",
    "Private :: Do Not Upload",
]
dependencies = [
    "datadog-checks-base>=27.5.0",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
deps = [
    "pywin32==228; sys_platform == 'win32' and python_version < '3.0'",
    "pywin32==304; sys_platform == 'win32' and python_version > '3.0'",
]

[project.urls]
Source = "https://github.com/DataDog/integrations-core"

[tool.hatch.version]
path = "datadog_checks/aspdotnet/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/manifest.json",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/aspdotnet",
]
dev-mode-dirs = [
    ".",
]
