[build-system]
requires = [
    "hatchling>=0.11.2",
    "setuptools>=66; python_version > '3.0'",
    "setuptools; python_version < '3.0'",
]
build-backend = "hatchling.build"

[project]
name = "datadog-clickhouse"
description = "The ClickHouse check"
readme = "README.md"
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "clickhouse",
]
authors = [
    { name = "Datadog", email = "packages@datadoghq.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
    "Private :: Do Not Upload",
]
dependencies = [
    "datadog-checks-base>=32.6.0",
]
dynamic = [
    "version",
]
license = "BSD-3-Clause"

[project.optional-dependencies]
deps = [
    "clickhouse-cityhash==1.0.2.3; python_version < '3.0'",
    "clickhouse-cityhash==1.0.2.4; python_version > '3.0'",
    "clickhouse-driver==0.2.0; python_version < '3.0'",
    "clickhouse-driver==0.2.6; python_version > '3.0'",
    "lz4==2.2.1; python_version < '3.0'",
    "lz4==4.3.2; python_version > '3.0'",
]

[project.urls]
Source = "https://github.com/DataDog/integrations-core"

[tool.hatch.version]
path = "datadog_checks/clickhouse/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/clickhouse",
]
dev-mode-dirs = [
    ".",
]
