[build-system]
requires = [
    "hatchling>=0.11.2",
]
build-backend = "hatchling.build"

[project]
name = "datadog-clickhouse"
description = "The ClickHouse check"
readme = "README.md"
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "clickhouse",
]
authors = [
    { name = "Datadog", email = "packages@datadoghq.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Private :: Do Not Upload",
]
dependencies = [
    "datadog-checks-base>=37.0.0",
]
dynamic = [
    "version",
]
license = "BSD-3-Clause"

[project.optional-dependencies]
deps = [
    "clickhouse-cityhash==1.0.2.4",
    "clickhouse-driver==0.2.9",
    "lz4==4.3.3",
]

[project.urls]
Source = "https://github.com/DataDog/integrations-core"

[tool.hatch.version]
path = "datadog_checks/clickhouse/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/clickhouse",
]
dev-mode-dirs = [
    ".",
]
