[build-system]
requires = [
    "hatchling>=0.11.2",
]
build-backend = "hatchling.build"

[project]
name = "datadog-cloud-spanner"
description = "The Cloud Spanner check"
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "cloud_spanner",
    "spanner",
    "gcp",
]
authors = [
    { name = "Datadog", email = "packages@datadoghq.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
    "Private :: Do Not Upload",
]
dependencies = [
    "datadog-checks-base>=37.34.1",
]
dynamic = [
    "version",
]
license = "BSD-3-Clause"

[project.optional-dependencies]
deps = [
    "google-cloud-spanner==3.69.0",
    "google-auth==2.56.0",
]

[project.urls]
Source = "https://github.com/DataDog/integrations-core"

[tool.hatch.version]
path = "datadog_checks/cloud_spanner/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
    "/manifest.json",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks/cloud_spanner",
]
dev-mode-dirs = [
    ".",
]
