[build-system]
requires = [
    "hatchling>=0.11.2",
]
build-backend = "hatchling.build"

[project]
name = "datadog-checks-base"
description = "The Datadog Check Toolkit"
readme = "README.md"
keywords = [
    "datadog",
    "agent",
    "checks",
]
authors = [
    { name = "Datadog", email = "packages@datadoghq.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dynamic = [
    "version",
]
license = "BSD-3-Clause"

[project.optional-dependencies]
db = [
    "mmh3==5.1.0",
]
# urllib3 is a dependency of requests that we explicitly
# make use of in a few places
deps = [
    "binary==1.0.1",
    "cachetools==5.5.2",
    "cryptography==44.0.3",
    "ddtrace==2.21.4",
    "jellyfish==1.2.0",
    "lazy-loader==0.4",
    "prometheus-client==0.21.1",
    "protobuf==6.30.2",
    "pydantic==2.11.4",
    "python-dateutil==2.9.0.post0",
    "pywin32==310; sys_platform == 'win32'",
    "pyyaml==6.0.2",
    "requests-toolbelt==1.0.0",
    "requests-unixsocket2==1.0.0",
    "requests==2.32.3",
    "simplejson==3.20.1",
    "urllib3==2.4.0",
    "wrapt==1.17.2",
]
http = [
    "aws-requests-auth==0.4.3",
    "botocore==1.38.8",
    "oauthlib==3.2.2",
    "pyjwt==2.10.1",
    "pyopenssl==25.0.0",
    "pysocks==1.7.1",
    "requests-kerberos==0.15.0",
    "requests-ntlm==1.3.0",
    "requests-oauthlib==2.0.0",
]
json = [
    "orjson==3.10.18",
]
kube = [
    "kubernetes==32.0.1",
    "requests-oauthlib==2.0.0",
]

[project.urls]
Source = "https://github.com/DataDog/integrations-core"

[tool.hatch.version]
path = "datadog_checks/base/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks",
]
dev-mode-dirs = [
    ".",
]
