[build-system]
requires = [
    "hatchling>=0.11.2",
]
build-backend = "hatchling.build"

[project]
name = "datadog-checks-base"
description = "The Datadog Check Toolkit"
readme = "README.md"
keywords = [
    "datadog",
    "agent",
    "checks",
]
authors = [
    { name = "Datadog", email = "packages@datadoghq.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]
dynamic = [
    "version",
]
license = "BSD-3-Clause"

[project.optional-dependencies]
db = [
    "mmh3==5.2.0",
]
deps = [
    "binary==1.0.2",
    "cachetools==6.2.2",
    "cryptography==46.0.3",
    "ddtrace==4.0.0",
    "jellyfish==1.2.1",
    "lazy-loader==0.4",
    "prometheus-client==0.23.1",
    "protobuf==6.33.1",
    "pydantic==2.12.4",
    "python-dateutil==2.9.0.post0",
    "pywin32==311; sys_platform == 'win32'",
    "pyyaml==6.0.3",
    "requests-toolbelt==1.0.0",
    "requests-unixsocket2==1.0.1",
    "requests==2.32.5",
    "simplejson==3.20.2",
    "urllib3==2.5.0",
    "wrapt==2.0.1",
]
http = [
    "aws-requests-auth==0.4.3",
    "botocore==1.41.2",
    "oauthlib==3.3.1",
    "pyjwt==2.10.1",
    "pyopenssl==25.3.0",
    "pysocks==1.7.1",
    "requests-kerberos==0.15.0",
    "requests-ntlm==1.3.0",
    "requests-oauthlib==2.0.0",
]
json = [
    "orjson==3.11.4",
]
kube = [
    "kubernetes==34.1.0",
    "requests-oauthlib==2.0.0",
]

[project.urls]
Source = "https://github.com/DataDog/integrations-core"

[tool.hatch.version]
path = "datadog_checks/base/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks",
]
dev-mode-dirs = [
    ".",
]

[tool.ruff]
extend = "../pyproject.toml"
