[build-system]
requires = [
    "hatchling>=0.11.2",
]
build-backend = "hatchling.build"

[project]
name = "datadog-checks-base"
description = "The Datadog Check Toolkit"
readme = "README.md"
keywords = [
    "datadog",
    "agent",
    "checks",
]
authors = [
    { name = "Datadog", email = "packages@datadoghq.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Monitoring",
]
dynamic = [
    "version",
]
license = "BSD-3-Clause"

[project.optional-dependencies]
db = [
    "mmh3==5.2.0",
]
deps = [
    "binary==1.0.2",
    "cachetools==6.2.0",
    "cryptography==45.0.6",
    "ddtrace==3.16.4",
    "jellyfish==1.2.0",
    "lazy-loader==0.4",
    "prometheus-client==0.22.1",
    "protobuf==6.32.0",
    "pydantic==2.11.7",
    "python-dateutil==2.9.0.post0",
    "pywin32==311; sys_platform == 'win32'",
    "pyyaml==6.0.2",
    "requests-toolbelt==1.0.0",
    "requests-unixsocket2==1.0.0",
    "requests==2.32.5",
    "simplejson==3.20.1",
    "urllib3==2.6.3",
    "wrapt==1.17.3",
]
http = [
    "aws-requests-auth==0.4.3",
    "botocore==1.40.21",
    "oauthlib==3.3.1",
    "pyjwt==2.10.1",
    "pyopenssl==25.1.0",
    "pysocks==1.7.1",
    "requests-kerberos==0.15.0",
    "requests-ntlm==1.3.0",
    "requests-oauthlib==2.0.0",
]
json = [
    "orjson==3.11.5",
]
kube = [
    "kubernetes==33.1.0",
    "requests-oauthlib==2.0.0",
]

[project.urls]
Source = "https://github.com/DataDog/integrations-core"

[tool.hatch.version]
path = "datadog_checks/base/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks",
]
dev-mode-dirs = [
    ".",
]

[tool.ruff]
extend = "../pyproject.toml"
