[build-system]
requires = [
    "hatchling>=0.11.2",
    "setuptools>=66; python_version > '3.0'",
    "setuptools; python_version < '3.0'",
]
build-backend = "hatchling.build"

[project]
name = "datadog-checks-dev"
description = "The Datadog Checks Developer Tool"
readme = "README.md"
license = "BSD-3-Clause"
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "dev tool",
    "tests",
]
authors = [
    { name = "Datadog", email = "packages@datadoghq.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "contextlib2; python_version < '3.0'",
    "coverage>=5.0.3",
    "flaky",
    "mock",
    "psutil",
    "py>=1.8.2; python_version < '3.0'",  # https://github.com/ionelmc/pytest-benchmark/issues/226
    "pytest",
    "pytest-asyncio>=0.23.4; python_version > '3.0'",
    "pytest-benchmark[histogram]<4.0.0; python_version < '3.0'",
    "pytest-benchmark[histogram]>=4.0.0; python_version > '3.0'",
    "pytest-cov>=2.6.1",
    "pytest-memray>=1.4.0; python_version > '3.0' and (platform_system=='Linux' or platform_system=='Darwin')",
    "pytest-mock",
    "pyyaml>=5.4.1",
    "requests>=2.22.0",
    "shutilwhich==1.1.0; python_version < '3.0'",
    "six",
    "subprocess32==3.5.4; python_version < '3.0'",
    "tenacity",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
cli = [
    "aiohttp",
    "aiomultiprocess",
    "atomicwrites",
    "beautifulsoup4>=4.9.3",
    "black==23.12.1",  # TODO Remove once https://github.com/koxudaxi/datamodel-code-generator/issues/1821 is fixed
    "build>=0.7.0",
    "click~=8.1.6",
    "codespell",
    "colorama",
    "datamodel-code-generator~=0.21.4",
    "hatch>=1.5.0",
    "in-toto==2.0.0",
    "jsonschema",
    "markdown",
    "orjson",
    "packaging",
    "pip-tools",
    "pathspec>=0.10.0",
    "platformdirs>=2.0.0a3",
    "pydantic>=2.0.2, <2.4.0",
    "pysmi>=0.3.4",
    "securesystemslib[crypto]==0.28.0",
    "semver>=2.13.0",
    "tabulate>=0.8.9",
    "toml>=0.9.4, <1.0.0",
    "tomli>=1.1.0",
    "tomli-w>=1.0.0",
    "tox>=3.12.1, <4.0.0",
    # Move towncrier dependency to ddev once we migrate changelog-related commands.
    # We need at least v23.11.0, because it lets us release with empty changelogs:
    # The issue that is fixed: https://github.com/twisted/towncrier/issues/538
    "towncrier>=23.11.0",
    "twine>=1.11.0",
    "virtualenv<20.22.0",
    # TODO: Remove once every check has a pyproject.toml
    "setuptools>=66; python_version > '3.0'",
    "setuptools; python_version < '3.0'",
    "wheel>=0.31.0",
]

[project.entry-points.pytest11]
datadog_checks = "datadog_checks.dev.plugin.pytest"

[project.urls]
Source = "https://github.com/DataDog/integrations-core"

[tool.hatch.version]
path = "datadog_checks/dev/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks",
]
dev-mode-dirs = [
    ".",
]

[tool.pytest.ini_options]
testpaths = "tests"
