[build-system]
requires = [
    "hatchling>=0.11.2",
]
build-backend = "hatchling.build"

[project]
name = "datadog-checks-dev"
description = "The Datadog Checks Developer Tool"
readme = "README.md"
license = "BSD-3-Clause"
keywords = [
    "datadog",
    "datadog agent",
    "datadog check",
    "dev tool",
    "tests",
]
authors = [
    { name = "Datadog", email = "packages@datadoghq.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "coverage>=5.0.3",
    "flaky>=3.8.0",
    "mock",
    "pytest==9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark[histogram]>=5.2.3",
    "pytest-cov>=7.1.0",
    "pytest-memray>=1.8.0; platform_system=='Linux' or platform_system=='Darwin'",
    "pytest-mock>=3.15.1",
    "pyyaml>=5.4.1",
    "requests>=2.33.0",
    "tenacity",
]
dynamic = [
    "version",
]

[project.optional-dependencies]
cli = [
    "aiohttp",
    "aiomultiprocess",
    "atomicwrites",
    "beautifulsoup4==4.12.3",
    "build>=0.7.0",
    "click~=8.4.2",
    "codespell",
    "colorama",
    "datamodel-code-generator~=0.25.6",
    "hatch>=1.5.0",
    "in-toto==2.0.0",
    "jsonschema",
    "markdown",
    "orjson",
    "packaging",
    "pip-tools",
    "pathspec>=0.10.0",
    "platformdirs>=2.0.0a3",
    "pydantic>=2.13.4",
    "pysmi==1.6.2",
    # ruff is invoked as a subprocess by the model generator to format
    # auto-generated config_models files (see datadog_checks/dev/tooling/
    # configuration/consumers/model/code_formatter.py). Keep this pin in sync
    # with the version used by ddev's hatch lint env (currently `ruff==0.11.10`
    # in ddev/src/ddev/plugin/external/hatch/environment_collector.py) until
    # the commands here are migrated into ddev itself.
    "ruff==0.11.10",
    "securesystemslib[crypto]==0.28.0",
    "semver>=2.13.0",
    "tabulate>=0.8.9",
    "toml>=0.9.4, <1.0.0",
    "tomli>=1.1.0",
    "tomli-w>=1.0.0",
    "tox>=3.12.1, <4.0.0",
    # Move towncrier dependency to ddev once we migrate changelog-related commands.
    # We need at least v23.11.0, because it lets us release with empty changelogs:
    # The issue that is fixed: https://github.com/twisted/towncrier/issues/538
    # v24.7 changed the way towncrier searches for template files and that broke us.
    # We have to pin to 23.11.0 until the following issue is done:
    # https://github.com/twisted/towncrier/issues/641
    "towncrier==23.11.0",
    "twine>=1.11.0",
    "virtualenv>=20.39.1",
    # TODO: Remove once every check has a pyproject.toml
]

[project.entry-points.pytest11]
datadog_checks = "datadog_checks.dev.plugin.pytest"

[project.urls]
Source = "https://github.com/DataDog/integrations-core"

[tool.hatch.version]
path = "datadog_checks/dev/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog_checks",
    "/tests",
]

[tool.hatch.build.targets.wheel]
include = [
    "/datadog_checks",
]
dev-mode-dirs = [
    ".",
]

[tool.pytest.ini_options]
testpaths = "tests"
